--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       <li><a href="">Home</a></li>
       <li><a href="">Resumes</a></li>
       <li><a href="">Projects</a></li>
+        <ul><a href="" >Electrical</a></ul>
+        <ul><a href="" >Computer</a></ul>
+        <ul><a href="" >Software</a></ul>
+        <ul><a href="" >Web Development</a></ul>
       <li><a href="">Contact</a></li>
     </ul>
   </nav>
