--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+  <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
   <link rel="stylesheet" href="assets/css/header.php" type="text/css">
   <link rel="stylesheet" href="assets/css/footer.php" type="text/css">
 
@@ -38,24 +38,22 @@
     </ul>
   </nav>
 
-  <main>
-    <div class="heading">
-      <h1>
-        Hello, I'm Steven Varada
-      </h1>
-      <p>
-        Arriving to the privliaged place I'm in life has change how I go back
-        to see the setbacks and challenges I have had to overcome
-        - ADHD, and axiety
-        - First generation American
-        - First to go to college in my family
-        - Zipcode
-        - Lisp
-        - Bullied from first grade to eight grade
-        - Single parent household that was absuive
-      </p>
-    </div>
-  </main>
+  <header>
+    <h1>
+      Hello, I'm Steven Varada
+    </h1>
+    <p>
+      Arriving to the privliaged place I'm in life has change how I go back
+      to see the setbacks and challenges I have had to overcome
+      - ADHD, and axiety
+      - First generation American
+      - First to go to college in my family
+      - Zipcode
+      - Lisp
+      - Bullied from first grade to eight grade
+      - Single parent household that was absuive
+    </p>
+  </header>
 
   <footer>
     <div class="innerFooter">
