--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
 </head>
 <body>
+
   <nav>
     <div class="logo">
-        FIX THIS LOGO REF<a href="" alt="Fix Logo Img"></a>
+      <a href="" alt="Fix Logo Img">FIX THIS LOGO REF</a>
     </div>
 
     <ul>
@@ -78,5 +79,6 @@
       </div>
     </div>
   </footer>
+
 </body>
 </html>
