Fixed the nav drop down list

--- a/index.html
+++ b/index.html
@@ -20,26 +20,29 @@
 
 </head>
 <body>
-
-  <nav>
+  <header>
     <div class="logo">
-      <a href="" alt="Fix Logo Img">FIX THIS LOGO REF</a>
+      <a href="" alt="Fix Logo Img">The Logo</a>
     </div>
 
-    <ul>
-      FIX THE NAV LINKS TO THE PAGES
-      <li><a href="">Home</a></li>
-      <li><a href="">Resumes</a></li>
-      <li><a href="">Projects</a></li>
-        <ul><a href="" >Electrical</a></ul>
-        <ul><a href="" >Computer</a></ul>
-        <ul><a href="" >Software</a></ul>
-        <ul><a href="" >Web Development</a></ul>
-      <li><a href="">Contact</a></li>
-    </ul>
-  </nav>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Resumes</a></li>
+        <li><a href="#">Projects</a></li>
+        <!-- Project Drop down list -->
+        <ol>
+          <li><a href="#" >Electrical</a></li>
+          <li><a href="#" >Computer</a></li>
+          <li><a href="#" >Software</a></li>
+          <li><a href="#" >Web Development</a></li>
+        </ol>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <header>
+  <div>
     <h1>
       Hello, I'm Steven Varada
     </h1>
@@ -54,7 +57,7 @@
       - Bullied from first grade to eight grade
       - Single parent household that was absuive
     </p>
-  </header>
+  </div>
 
   <footer>
     <div class="innerFooter">
