--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="" alt="Fix Logo Img">The Logo</a>
+      <a href="" alt="Fix Logo Img">Steven Varada</a>
     </div>
 
     <nav>
