--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Resumes</a></li>
         <li><a href="#">Projects</a></li>
-        <!-- Project Drop down list -->
         <ol>
           <li><a href="#" >Electrical</a></li>
           <li><a href="#" >Computer</a></li>
@@ -42,7 +41,7 @@
     </nav>
   </header>
 
-  <div>
+  <div class="card">
     <h1>
       Hello, I'm Steven Varada
     </h1>
