clenaing up code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       Hello, I'm Steven Varada
     </h1>
     <p>
-      Arriving to the privliaged place I'm in life has change how I go back
+      Arriving to the place I'm in life has change how I go back
       to see the setbacks and challenges I have had to overcome
       - ADHD, and axiety
       - First generation American
