--- a/index.html
+++ b/index.html
@@ -25,36 +25,27 @@
       <a href="" alt="Fix Logo Img">Steven Varada</a>
     </div>
 
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+
+    <label for="nav-toggle" class="nav-toggle-label">
+      <span></span>
+    </label>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Resumes</a></li>
-        <li><a href="#">Projects</a></li>
-        <ol>
-          <li><a href="#" >Electrical</a></li>
-          <li><a href="#" >Computer</a></li>
-          <li><a href="#" >Software</a></li>
-          <li><a href="#" >Web Development</a></li>
-        </ol>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact Me</a></li>
       </ul>
     </nav>
   </header>
 
   <div class="card">
     <h1>
-      Hello, I'm Steven Varada
+      *Introduction Statement
     </h1>
     <p>
       Arriving to the place I'm in life has change how I go back
       to see the setbacks and challenges I have had to overcome
-      - ADHD, and axiety
-      - First generation American
-      - First to go to college in my family
-      - Zipcode
-      - Lisp
-      - Bullied from first grade to eight grade
-      - Single parent household that was absuive
     </p>
   </div>
 
