Mobile Nav Done

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <div class="card">
     <h1>
-      *Introduction Statement
+      I am a <span>Software Engineer, Computer Enginer, Web developer</span>
     </h1>
     <p>
       Arriving to the place I'm in life has change how I go back
