Fixing nav menus bugs

--- a/index.html
+++ b/index.html
@@ -39,37 +39,177 @@
     </nav>
   </header>
 
-  <div class="card">
+  <!-- About Me Section Desktop -->
+  <div class="aboutMeDesktop">
     <h1>
-      I am a <span>Software Engineer, Computer Enginer, Web developer</span>
+      About Me
     </h1>
+    <h1>
+      Steven Varada
+    </h1>
+    <h2>
+      I am a <span>Software Engineer, Computer Enginer, Web developer</span>
+    </h2>
     <p>
-      Arriving to the place I'm in life has change how I go back
-      to see the setbacks and challenges I have had to overcome
+      A engineer who thrives learning in a fast pace environment
+      a with a serious passion for software and new technologies
     </p>
   </div>
 
+<!-- About Me Section Desktop -->
+  <div class="aboutMeMobile">
+    <div class="titleText">
+      <h1>I live to learn and innovate</h1>
+      <h3><span>Software Engineer</span> from NY,NY</h3>
+    </div>
+
+    <!-- Portfolio Section -->
+    <div class="portfolioSection">
+      <div class="heading">
+        <h2>My Work</h2>
+        <a href="#">-View All Work</a>
+      </div>
+
+      <div class="slideShow">
+        <img src="" alt="">
+      </div>
+    </div>
+  </div>
+
+  <!-- Bottom Nav Section Mobile -->
+  <div class="bottomNav">
+    <div class="portfolio">
+      <img src="./assets/media/portfolio.svg" alt="Fix Icon">
+      <h3>Portfolio</h3>
+    </div>
+    <div class="skills">
+      <img src="./assets/media/skills.png" alt="Fix Icon">
+      <h3>skills</h3>
+    </div>
+    <div class="contact">
+      <img src="./assets/media/contact.svg" alt="Fix Icon">
+      <h3>Contact</h3>
+    </div>
+  </div>
+
+  <!-- Skills Section -->
+  <div class="skillSection">
+    <div>
+
+      <h3>Computer Engineering</h3>
+      <h3>Software Engineering</h3>
+      <h3>Web Development</h3>
+
+      <img src="" alt="">
+      <h3>Hardware</h3>
+      <ol>
+        <li>Cyclone V FPGA</li>
+        <li>Arduino Microcontroller</li>
+        <li>STM32F411 Microcontroller</li>
+        <li>Signal Generator</li>
+        <li>Oscilloscope</li>
+      </ol>
+      <button class="button">
+      </button>
+
+
+      <img src="" alt="">
+      <h3>Langauges</h3>
+      <ol>
+        <li>C++</li>
+        <li>C#</li>
+        <li>VHDL</li>
+        <li>Assembly</li>
+
+        <li>Java</li>
+        <li>Python</li>
+
+        <li>HTML5</li>
+        <li>FreeMarker</li>
+        <li>CSS</li>
+        <li>SASS</li>
+        <li>JavaScript</li>
+        <li>PHP</li>
+        <li>MySQL</li>
+        <li>ASP.Net</li>
+      </ol>
+      <button class="button">
+      </button>
+
+
+      <img src="" alt="">
+      <h3>Software</h3>
+      <ol>
+        <li>CLion</li>
+        <li>Eclipse</li>
+        <li>ModelSim</li>
+        <li>MATLAB</li>
+        <li>Intel’s Quartus</li>
+        <li>Intel’s System Integration Tool (Platform Designer)</li>
+        <li>Intel NIOS II Core</li>
+        <li>FreeRTOC</li>
+        <li>NI-Multisim</li>
+
+        <li>IntelliJ</li>
+        <li>Maven</li>
+        <li>BootStrap</li>
+        <li>Gradle</li>
+        <li>GIT</li>
+        <li>Spring MVC</li>
+        <li>Spark Java</li>
+        <li>ASP.Net</li>
+
+        <li>Visual Studio Code</li>
+        <li>Liferay DXP - Enterprise software</li>
+      </ol>
+
+      <button class="button">
+      </button>
+
+  </div>
+
+  <div class="experience">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+  </div>
+
+  <div class="contactCard">
+    <h2>Ready to Contact Your Star</h2>
+    <h3>Conact Me</h3>
+  </div>
+
   <footer>
-    <div class="innerFooter">
+    <div class="footerCoulms">
+      <a href="#" id="goingTop">
+        THIS WILL NEED YOU FIXING THE LOGO<img src="" alt="">
+        <p>Back to Top</p>
+      </a>
+    </div>
 
-      <div class="footerCoulms">
-        <a href="#" id="goingTop">
-          THIS WILL NEED YOU FIXING THE LOGO<img src="" alt="">
-          <p>Back to Top</p>
-        </a>
-      </div>
+    <div class="footerCoulms">
+      <h1>Social Media</h1>
+      <!-- The target blank creates a new tab when you clicking the links -->
+      <a href="https://www.linkedin.com/in/steven-varada" target="_blank">Linkedin</a>
+      <a href="https://github.com/StevenVarada?tab=repositories" target="_blank">GitHub</a>
+      <a href="https://meritpages.com/StevenVarada" target="_blank">RIT Merit Page</a>
+    </div>
 
-      <div class="footerCoulms">
-        <h1>Social Media</h1>
-        <!-- The target blank creates a new tab when you clicking the links -->
-        <a href="https://www.linkedin.com/in/steven-varada" target="_blank">Linkedin</a>
-        <a href="https://github.com/StevenVarada?tab=repositories" target="_blank">GitHub</a>
-        <a href="https://meritpages.com/StevenVarada" target="_blank">RIT Merit Page</a>
-      </div>
+    <div class="footerCoulms">
+      <h1>Resume</h1>
+      <!-- Add Download files -->
+      <a href="" target="_blank">Copmuter Engineering</a>
+      <a href="" target="_blank">Software Engineering</a>
+      <a href="" target="_blank">Web Development</a>
+    </div>
 
-      <div class="footerCoulms">
+    <div class="footerCoulms">
+      <button class="contactButton">
+
+      </button>
+      <p>
         Designed and Developed by Steven Varada &#8480;
-      </div>
+      </p>
     </div>
   </footer>
 
