--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
   </header>
 
-  <!-- About Me Section Desktop -->
+  <!-- Desktop About Me -->
   <div class="aboutMeDesktop">
     <h1>
       About Me
@@ -56,27 +56,33 @@
     </p>
   </div>
 
-<!-- About Me Section Desktop -->
+<!-- Mobile About Me -->
   <div class="aboutMeMobile">
     <div class="titleText">
       <h1>I live to learn and innovate</h1>
       <h3><span>Software Engineer</span> from NY,NY</h3>
-    </div>
 
-    <!-- Portfolio Section -->
-    <div class="portfolioSection">
       <div class="heading">
         <h2>My Work</h2>
         <a href="#">-View All Work</a>
       </div>
+    </div>
 
-      <div class="slideShow">
-        <img src="" alt="">
+    <div class="portfolioSection">
+      <div class="card">
+
+      </div>
+
+      <div class="card">
+        
+      </div>
+
+      <div class="card">
+        
       </div>
     </div>
   </div>
 
-  <!-- Bottom Nav Section Mobile -->
   <div class="bottomNav">
     <div class="portfolio">
       <img src="./assets/media/portfolio.svg" alt="Fix Icon">
@@ -92,7 +98,6 @@
     </div>
   </div>
 
-  <!-- Skills Section -->
   <div class="skillSection">
     <div>
 
