--- a/index.html
+++ b/index.html
@@ -8,21 +8,40 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
-  <link rel="stylesheet" href="assets/css/header.php" type="text/css">
-  <link rel="stylesheet" href="assets/css/footer.php" type="text/css">
+
+  <link rel="stylesheet" type="text/css" href="/assets/css/lightslider.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+
+  <style>
+    .portfolioSilderContainer{
+    height: 43vh;
+    width: 100vw;
+    }
+    .content-slider li {
+      background-color: red;
+    }
+  </style>
+  <!-- Jquery --> 
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="/assets/js/lightslider.js"></script> 
 
   <title>Homepage</title>
+  <!-- Page Icon -->
+  <!-- Fix icon to the real one -->
+  <link rel="shortcut icon" href="/assets/media/computerEngineering.svg">
 
 </head>
+
 <body>
+
   <header>
     <div class="logo">
-      <a href="" alt="Fix Logo Img">Steven Varada</a>
+      <a href="/" alt="Fix Logo Img">Steven Varada</a>
     </div>
 
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -59,7 +78,7 @@
 <!-- Mobile About Me -->
   <div class="aboutMeMobile">
     <div class="titleText">
-      <h1>I live to learn and innovate</h1>
+      <h1>I live to learn & innovate</h1>
       <h3><span>Software Engineer</span> from NY,NY</h3>
 
       <div class="heading">
@@ -67,40 +86,60 @@
         <a href="#">-View All Work</a>
       </div>
     </div>
-
-    <div class="portfolioSection">
-      <div class="card">
-
-      </div>
-
-      <div class="card">
-        
-      </div>
-
-      <div class="card">
-        
-      </div>
-    </div>
   </div>
 
   <div class="bottomNav">
     <div class="portfolio">
-      <img src="./assets/media/portfolio.svg" alt="Fix Icon">
+      <img src="./assets/media/" alt="Fix Icon">
       <h3>Portfolio</h3>
     </div>
     <div class="skills">
-      <img src="./assets/media/skills.png" alt="Fix Icon">
+      <img src="./assets/media/" alt="Fix Icon">
       <h3>skills</h3>
     </div>
     <div class="contact">
-      <img src="./assets/media/contact.svg" alt="Fix Icon">
+      <img src="./assets/media/" alt="Fix Icon">
       <h3>Contact</h3>
     </div>
   </div>
 
+  <div class="portfolioSilderContainer">
+    <ul id="content-slider" class="content-slider">
+
+        <li>
+          <div class="card">
+            <div class="overlay"></div>
+            <button class="cardButton">View Project</button>
+            <div class="titleText">
+              <h1> *Project Name A</h1>
+            </div>
+          </div>
+        </li>
+
+        <li>
+          <div class="card">
+            <div class="overlay"></div>
+            <button class="cardButton">View Project</button>
+            <div class="titleText">
+              <h1> *Project Name B</h1>
+            </div>
+          </div>
+        </li>
+
+        <li>
+          <div class="card">
+            <div class="overlay"></div>
+            <button class="cardButton">View Project A</button>
+            <div class="titleText">
+              <h1> *Project Name C</h1>
+            </div>
+          </div>
+        </li>
+    </ul>
+</div>
+
   <div class="skillSection">
     <div>
-
       <h3>Computer Engineering</h3>
       <h3>Software Engineering</h3>
       <h3>Web Development</h3>
@@ -170,7 +209,7 @@
 
       <button class="button">
       </button>
-
+    </div>
   </div>
 
   <div class="experience">
@@ -217,6 +256,6 @@
       </p>
     </div>
   </footer>
-
 </body>
+<script type="text/javascript" src="/assets/js/script.js" ></script>
 </html>
