--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@
   <link rel="stylesheet" type="text/css" href="/assets/css/lightslider.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
 
-  <style>
-    .portfolioSilderContainer{
-    height: 43vh;
-    width: 100vw;
-    }
-    .content-slider li {
-      background-color: red;
-    }
-  </style>
   <!-- Jquery --> 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/assets/js/lightslider.js"></script> 
@@ -86,6 +77,45 @@
         <a href="#">-View All Work</a>
       </div>
     </div>
+
+    <div class="portfolioSilderContainer">
+
+        <ul id="content-slider" class="content-slider">
+
+          <li>
+            <div class="card">
+              <div class="overlay"></div>
+              <button class="cardButton">View Project</button>
+              <div class="cardText">
+                <p> *Project Name A </p>
+              </div>
+            </div>
+          </li>
+  
+          <li>
+            <div class="card">
+              <div class="overlay"></div>
+              <button class="cardButton">View Project</button>
+              <div class="cardText">
+                <p> *Project Name B</p>
+              </div>
+            </div>
+          </li>
+  
+          <li>
+            <div class="card">
+              <div class="overlay"></div>
+              <button class="cardButton">View Project A</button>
+              <div class="cardText">
+                <p> *Project Name C</p>
+              </div>
+            </div>
+          </li>
+
+        </ul>
+
+    </div>
+
   </div>
 
   <div class="bottomNav">
@@ -102,41 +132,6 @@
       <h3>Contact</h3>
     </div>
   </div>
-
-  <div class="portfolioSilderContainer">
-    <ul id="content-slider" class="content-slider">
-
-        <li>
-          <div class="card">
-            <div class="overlay"></div>
-            <button class="cardButton">View Project</button>
-            <div class="titleText">
-              <h1> *Project Name A</h1>
-            </div>
-          </div>
-        </li>
-
-        <li>
-          <div class="card">
-            <div class="overlay"></div>
-            <button class="cardButton">View Project</button>
-            <div class="titleText">
-              <h1> *Project Name B</h1>
-            </div>
-          </div>
-        </li>
-
-        <li>
-          <div class="card">
-            <div class="overlay"></div>
-            <button class="cardButton">View Project A</button>
-            <div class="titleText">
-              <h1> *Project Name C</h1>
-            </div>
-          </div>
-        </li>
-    </ul>
-</div>
 
   <div class="skillSection">
     <div>
